# securitylab

./: .env.example  .gitignore  EN 18031 IOT 安全检测系统建设.md  FUZZING_GUIDE.md  README_DEPLOYMENT.md  README_TARGETS.md  analyze_cross_project_refs.sh  analyze_data.sh  data_analysis_report_20251225_204304.txt  data_consistency_check.sql  docker-compose-targets.yml  docker-compose.yml  execute_phase4.py  phase4_cleanup.sql  phase4_execution_log.txt  phase5_execution_log.txt  reproduce_fuzzing.py  后端设计说明书.md
backend/: .env.example  .gitignore  Dockerfile  INSTALL_POETRY.md  LOCAL_DEV.md  README.md  check_weasyprint.py  demo_users.sql  docker-compose.yml  final_check_weasyprint.py  init_db.py  pyproject.toml  quick-start.sh  setup-local-dev.sh  test_delete.py
backend/alembic/: env.py
backend/alembic/versions/: 202512251400_enhance_report_model.py  9b27010ba04d_add_ping_scan_to_task_types.py  phase5_20251225_add_sample_project_constraints.py
backend/app/: main.py
backend/app/api/: __init__.py  (+7 more)
backend/scripts/: check_users.py  create_and_test_task.py  create_reports.py  create_reports_table.sql  create_tasks.py  diagnose_fuzzing_metrics.py  diagnose_ping_logs.py  diagnose_task_sync.py  diagnose_vuln_scan.py  init.sql  monitor_scan.py  phase4_cleanup.py  phase5_constraints.py  seed_data.py  sync_all_tasks.py  test_api_logs.py  test_complete_vuln_flow.py  test_db.py  test_e2e_logs.py  test_fuzzing.py  test_fuzzing_api.py  test_fuzzing_worker_direct.py  test_improved_vuln_scan.py  test_nmap_params.py  test_nmap_scan.py  test_nvd_client.py  test_status_endpoint.py  test_task.py  test_task_control.py  test_task_execution.sh  test_version_matching.py  test_vuln_scan_e2e.py
(+139 files in other folders)
